[package]
name = "easycurses"
version = "0.4.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/easycurses-rs"
readme = "README.md"
keywords = ["curses", "tui"]
description = "A crate that makes working with curses easy."
license = "MIT/Apache-2.0"

[dependencies]
pancurses = "0.9"

[lib]
name = "easycurses"
path = "src/lib.rs"

[[bin]]
name = "easycurses_demo"
path = "src/demo.rs"
